# rosin

./: .gitignore  Cargo.toml  LICENSE  LICENSE-MIT  README.md  clippy.toml  rustfmt.toml
.cargo/: mutants.toml
examples/: calc.css  calc.rs  min.css  min.rs
examples/calculator/: Cargo.toml  watch.sh
examples/calculator/src/: lib.rs  main.rs  style.css
fuzz/: Cargo.toml
fuzz/corpus/css_parse/: background-color.css  background-image-var.css  background-image.css  border-bottom-color.css  border-bottom-left-radius.css  border-bottom-right-radius.css  border-bottom-width.css  border-bottom.css  border-color.css  border-left-color.css  border-left-width.css  border-left.css  border-radius.css  border-right-color.css  border-right-width.css  border-right.css  border-top-color.css  border-top-left-radius.css  border-top-right-radius.css  border-top-width.css  border-top.css  border-width.css  border.css  box-shadow.css  child-between.css  child-bottom.css  child-left.css  child-right.css  child-top.css  display.css  flex-basis.css  font-width.css  font.css  left.css  letter-spacing.css  line-height.css  max-bottom.css  max-child-between.css  max-child-bottom.css  max-child-left.css  (+31 more)
fuzz/corpus/fluent_parse/: 01_hello-world.ftl  02_greet-user.ftl  03_long-message.ftl  04_brand-name.ftl  05_term.ftl  06_use-term.ftl  07_gendered-greeting.ftl  08_unread-emails.ftl  09_notifications.ftl  10_nested-example.ftl  11_formatted-number.ftl  12_formatted-date.ftl  13_escape-example.ftl  14_optional-value.ftl  15_app-name.ftl  16_preserve-space.ftl  17_files-remaining.ftl  18_all-in-one.ftl  19_comment.ftl
fuzz/dict/: css.dict
fuzz/fuzz_targets/: css_parse.rs  fluent_parse.rs
rosin/: Cargo.toml
rosin-core/: Cargo.toml
rosin-core/benches/: parse_stylesheet.rs  selector_matching.rs
rosin-core/examples/: bench_vars.rs  winit.rs
rosin-core/src/: alloc.rs  callbacks.rs  data.rs  draw.rs  events.rs  geometry.rs  grc.rs  hasher.rs  hot_reload.rs  interner.rs  key.rs  layout.rs  lenses.rs  lib.rs  localization.rs  nodeid.rs  parser.rs  pointer.rs  properties.rs  reactive.rs  render.rs  resource.rs  sheet.rs  style.rs  stylesheet.rs  sync.rs  tests.rs  text.rs  tree.rs  util.rs  viewport.rs  window.rs
rosin-core/src/css/: mod.rs  parser.rs  properties.rs  style.rs  stylesheet.rs
rosin-core/src/tests/: localization.rs  loom.rs  mod.rs  reactive.rs
rosin-core/src/tests/css/: background_image.rs  border.rs  color.rs  font.rs  mod.rs  selector_matching.rs  shadows.rs  simple_properties.rs  test.css  transform.rs  util.rs  vars.rs
rosin-core/src/widgets/: button.rs  dynlabel.rs  label.rs  mod.rs  slider.rs  textbox.rs
rosin-derive/: Cargo.toml
rosin-derive/src/: lib.rs
rosin/examples/: 7gui_temp.rs  border.rs  calc.css  calc.rs  counter.css  counter.rs  draw.css  draw.rs  file_dialog_test.rs  min.css  min.rs  paint.css  paint.rs  stress.rs  text.rs  url.rs  wgpu_simple.rs
rosin/examples/styles/: 7gui.css  border.css  calc.css  counter.css  paint.css  stress.css  text_layout.css  wgpu.css
rosin/src/: app.rs  callbacks.rs  desc.rs  dialog.rs  gpu.rs  handle.rs  ime.rs  lib.rs  libloader.rs  menu.rs  typehash.rs  view.rs  viewfn.rs  window.rs
rosin/src/linux/: app.rs  create_window.rs  handle.rs  mod.rs  util.rs  wayland.rs  wayland_state.rs  wayland_window.rs  x11.rs  x11_state.rs
rosin/src/linux/csd_frame/: frame.rs  mod.rs  raw.rs  slot.rs
rosin/src/linux/rfd_dialog/: ffi.rs  libdbus.rs  mod.rs
rosin/src/mac/: app.rs  handle.rs  hot.rs  mod.rs  util.rs  window.rs
rosin/src/widgets/: button.rs  checkbox.rs  dragvalue.rs  dropdown.rs  label.rs  mod.rs  perfdisplay.rs  progressbar.rs  scrollarea.rs  slider.rs  tabs.rs  textbox.rs
rosin/src/widgets/styles/: dark_theme.css  widgets.css
src/: alloc.rs  app.rs  blit.wgsl  default.css  dom.rs  gc.rs  geometry.rs  grc.rs  hot_reload.rs  key.rs  layout.rs  lens.rs  lenses.rs  lib.rs  libloader.rs  minmax.rs  parser.rs  render.rs  style.rs  system.rs  tests.rs  tree.rs  view.rs  widgets.rs  window.rs
src/widgets/: button.rs  dynlabel.rs  label.rs  mod.rs
