[package]
name = "rosin"
version = "0.2.0"
authors = ["TimTom <timtom.business@gmail.com>"]
edition = "2018"
description = "Rosin is a GUI library for Rust that aims to be extremely easy to use."
documentation = "https://github.com/timtom-dev/rosin"
homepage = "https://www.rosin.rs/"
repository = "https://github.com/timtom-dev/rosin"
readme = "README.md"
keywords = ["GUI"]
categories = ["gui"]
license = "MIT"

[dependencies]
druid-shell = { git = "https://github.com/xi-editor/druid.git" }
cssparser = "0.27"
libloading = "0.6"
bumpalo = { version = "3.4", features = ["collections"] }
font-kit = "0.9"

[features]
hot-reload = []
