[package]
name = "rosin"
version = "0.2.0"
authors = ["TimTom <timtom.business@gmail.com>"]
edition = "2018"
description = "Rosin is a GUI framework for Rust that aims to be extremely easy to use."
documentation = "https://github.com/sailbrush/rosin"
homepage = "https://github.com/sailbrush/rosin"
repository = "https://github.com/sailbrush/rosin"
readme = "README.md"
keywords = ["GUI"]
categories = ["gui"]
license = "MIT"

[dependencies]
bumpalo = { version = "3.6", features = ["collections"] }
cssparser = "0.28"
femtovg = "0.1.2"
font-kit = "0.10"
glutin = "0.26"
libloading = "0.7"

[features]
hot-reload = []
