[package]
name = "rosin-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1", features = ["derive"] }

[dependencies.rosin-core]
path = "../rosin-core"

[[bin]]
name = "css_parse"
path = "fuzz_targets/css_parse.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fluent_parse"
path = "fuzz_targets/fluent_parse.rs"
test = false
doc = false
bench = false

[workspace]
