[package]
name = "rosin-core"
version = "0.2.0"
authors = ["TimTom <timtom.business@gmail.com>"]
edition = "2018"
description = "Rosin is a GUI framework for Rust that aims to be extremely easy to use."
documentation = "https://github.com/sailbrush/rosin"
homepage = "https://github.com/sailbrush/rosin"
repository = "https://github.com/sailbrush/rosin"
readme = "README.md"
keywords = ["GUI"]
categories = ["gui"]
license = "MIT"

[dependencies]
bumpalo = { version = "3.6", features = ["collections"] }
cssparser = "0.28"
lazy_static = "1.4.0"
druid-shell = { git = "https://github.com/linebender/druid.git" }
