[package]
name = "rosin-core"
version = "0.2.0"
authors = ["TimTom <timtom.business@gmail.com>"]
edition = "2021"
description = "Rosin is a GUI framework for Rust that aims to be extremely easy to use."
documentation = "https://github.com/sailbrush/rosin"
homepage = "https://github.com/sailbrush/rosin"
repository = "https://github.com/sailbrush/rosin"
readme = "README.md"
keywords = ["GUI"]
categories = ["gui"]
license = "MIT"

[dependencies]
bumpalo = { version = "3.6", features = ["collections"] }
cssparser = "0.28"
druid-shell = "0.7"
keyboard-types = "0.6"
