[package]
name = "rosin-derive"
version = "0.3.0"
authors = ["TimTom <timtom.business@gmail.com>"]
edition = "2024"
description = "Rosin is a GUI library that aims to be extremely easy to use."
documentation = "https://docs.rs/rosin/latest/rosin/"
homepage = "https://github.com/sailbrush/rosin"
repository = "https://github.com/sailbrush/rosin"
readme = "../README.md"
keywords = ["GUI"]
categories = ["gui"]
license = "Apache-2.0 OR MIT"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
